--- a/css/index.css
+++ b/css/index.css
@@ -1,124 +1,148 @@
-.bgImg {
-	background: url(../img/reproduction.png);
-	background-size: 100% 100%;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
+/* 默认样式 */
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.hexinBox{
-	width: 95%;
-	height: 90%;
-	background-color: yellow;
+li {
+    list-style-position: inside;
+    list-style-type: none;
 }
 
-.box {
-	display: flex;
-	flex-direction: column;
-	width: 80%;
-	margin: 0 auto;
-	height: 600px;
-	justify-content: space-around;
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+/* 布局 */
+header {
+    height: 5%;
+    background: #ffffff;
+}
+section {
+    background: no-repeat url('/img/reproduction.png');
+    background-size: cover;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+.section1 {
+    height: 30%;
+}
+.section2 {
+    height: 40%;
+}
+.section3 {
+    height: 30%;
+}
+/* header部分 */
+header {
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header div span {
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 50px;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -1px;
+    color: #000000;
+}
+header div:nth-child(3) span {
+    letter-spacing: -3px;
 }
 
-.word1 {
-	font-family: PingFangSC-Regular;
-	font-size: 67px;
-	font-weight: normal;
-	font-stretch: normal;
-	line-height: 133px;
-	letter-spacing: 0px;
-	color: #ffffff;
+/* .section1 */
+.section1 {
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 110px;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -1px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .section1 */
+.section2 {
+    padding: 60px 0;
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 50px;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -1px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/* .section2 */
+.section2 div {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section2 div span {
+    width: 80%;
+    padding: 15px 0;
+    border-radius: 107px;
+    background: rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+/* .section3 */
+.section3 {
+    padding-top: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.word2 {
-	font-family: PingFangSC-Light;
-	font-size: 36px;
-	font-weight: normal;
-	font-stretch: normal;
-	line-height: 133px;
-	letter-spacing: 0px;
-	color: #ffffff;
+.section3 div:nth-child(1) img {
+    height: 80px;
+    margin-right: 20px;
+}
+.section3 div:nth-child(2) {
+    width: 12em;
+    font-size: 42px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
 }
 
-.companyWord {
-	font-family: PingFangSC-Regular;
-	font-size: 83px;
-	font-weight: normal;
-	font-stretch: normal;
-	line-height: 133px;
-	letter-spacing: 0px;
-	color: #ffffff;
+.section3 div:nth-child(2) span {
+    font-size: 42px;
+    line-height: 1;
+    height: 1em;
+    overflow: hidden;
+    text-align: justify;
+}
+.section3 div:nth-child(2) span::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+.section3 div:nth-child(2) .space {
+    height: 15px;
+}
+.section3 div:nth-child(2) span:nth-child(3) {
+    font-size: 22px;
 }
 
-.companyWord1 {
-	font-family: PingFangSC-Regular;
-	font-size: 42px;
-	font-weight: normal;
-	font-stretch: normal;
-	letter-spacing: 2px;
-	color: #ffffff;
-	opacity: 0.8;
-}
-
-.companyBox {
-	width: 90%;
-	height: 80%;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-.companyTitle {
-	text-align: left;
-}
-
-.blueLine {
-	width: 5px;
-	height: 43px;
-	background-color: #00ffff;
-}
-
-.blueBox {
-	font-family: PingFangSC-Thin;
-	font-size: 46px;
-	font-weight: normal;
-	font-stretch: normal;
-	line-height: 33px;
-	letter-spacing: 2px;
-	color: #ffffff;
-	margin-left: 25px;
-}
-
-.ConTitle {
-	height: 200px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-.ConWordBox{
-		font-family: PingFangSC-Thin;
-		font-size: 38px;
-		font-weight: normal;
-		font-stretch: normal;
-		letter-spacing: 2px;
-		color: white;
-		text-align: left;
-}
-
-.companyCon {
-	display: flex;
-	flex-direction: column;
-	height: 60%;
-	justify-content: space-between;
-}
-
-.companyConB {
-	display: flex;
-	flex-direction: row;
-	width: 35%;
+.swiper-container {
+    width: 600px;
+    height: 300px;
 }
