--- a/css/index.css
+++ b/css/index.css
@@ -19,69 +19,77 @@ li {
 }
 body {
     height: 100vh;
+}
+/* 布局 */
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+.wrapper1 {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
-/* 布局 */
-header {
+.wrapper1 .header {
     height: 5%;
     background: #ffffff;
 }
-section {
+.wrapper1 .section {
     background: no-repeat url('/img/reproduction.png');
     background-size: cover;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
-.section1 {
+.wrapper1 .section1 {
     height: 30%;
 }
-.section2 {
+.wrapper1 .section2 {
     height: 40%;
 }
-.section3 {
+.wrapper1 .section3 {
     height: 30%;
 }
-/* header部分 */
-header {
-    padding: 0 15px;
+/* .header部分 */
+.wrapper1 .header {
+    padding: 0 0.75rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-header div span {
+.wrapper1 .header div span {
     font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
+    font-size: 2.5rem;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -1px;
+    letter-spacing: -0.05rem;
     color: #000000;
 }
-header div:nth-child(3) span {
-    letter-spacing: -3px;
+.wrapper1 .header div:nth-child(3) span {
+    letter-spacing: -0.15rem;
 }
 
 /* .section1 */
-.section1 {
+.wrapper1 .section1 {
     font-family: AdobeHeitiStd-Regular;
-    font-size: 110px;
+    font-size: 5.5rem;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -1px;
+    letter-spacing: -0.05rem;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 /* .section1 */
-.section2 {
-    padding: 60px 0;
+.wrapper1 .section2 {
+    padding: 3rem 0;
     font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
+    font-size: 2.5rem;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -1px;
+    letter-spacing: -0.05rem;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -89,60 +97,55 @@ header div:nth-child(3) span {
     justify-content: center;
 }
 /* .section2 */
-.section2 div {
+.wrapper1 .section2 div {
     height: 20%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.section2 div span {
+.wrapper1 .section2 div span {
     width: 80%;
-    padding: 15px 0;
-    border-radius: 107px;
+    padding: 0.75rem 0;
+    border-radius: 5.35rem;
     background: rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 /* .section3 */
-.section3 {
-    padding-top: 150px;
+.wrapper1 .section3 {
+    padding-top: 7.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.section3 div:nth-child(1) img {
-    height: 80px;
-    margin-right: 20px;
+.wrapper1 .section3 div:nth-child(1) img {
+    height: 4rem;
+    margin-right: 1rem;
 }
-.section3 div:nth-child(2) {
+.wrapper1 .section3 div:nth-child(2) {
     width: 12em;
-    font-size: 42px;
+    font-size: 2.1rem;
     color: #fff;
     display: flex;
     flex-direction: column;
 }
 
-.section3 div:nth-child(2) span {
-    font-size: 42px;
+.wrapper1 .section3 div:nth-child(2) span {
+    font-size: 2.1rem;
     line-height: 1;
     height: 1em;
     overflow: hidden;
     text-align: justify;
 }
-.section3 div:nth-child(2) span::after {
+.wrapper1 .section3 div:nth-child(2) span::after {
     content: '';
     display: inline-block;
     width: 100%;
 }
-.section3 div:nth-child(2) .space {
-    height: 15px;
+.wrapper1 .section3 div:nth-child(2) .space {
+    height: 0.75rem;
 }
-.section3 div:nth-child(2) span:nth-child(3) {
-    font-size: 22px;
-}
-
-.swiper-container {
-    width: 600px;
-    height: 300px;
+.wrapper1 .section3 div:nth-child(2) span:nth-child(3) {
+    font-size: 1.1rem;
 }
