--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     height: 100%;
 }
+/* .wrapper1 */
 .wrapper1 {
     height: 100%;
     width: 100%;
@@ -147,5 +148,131 @@ body {
     height: 0.75rem;
 }
 .wrapper1 .section3 div:nth-child(2) span:nth-child(3) {
+    font-size: 1.1rem;
+}
+
+/* .wrapper2 */
+.wrapper2 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper2 .header {
+    height: 5%;
+    background: #ffffff;
+}
+.wrapper2 .section {
+    background: no-repeat url('/img/reproduction.png');
+    background-size: cover;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper2 .section1 {
+    height: 30%;
+}
+.wrapper2 .section2 {
+    height: 40%;
+}
+.wrapper2 .section3 {
+    height: 30%;
+}
+/* .header部分 */
+.wrapper2 .header {
+    padding: 0 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.wrapper2 .header div span {
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 2.5rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -0.05rem;
+    color: #000000;
+}
+.wrapper2 .header div:nth-child(3) span {
+    letter-spacing: -0.15rem;
+}
+
+/* .section1 */
+.wrapper2 .section1 {
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 5.5rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -0.05rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .section1 */
+.wrapper2 .section2 {
+    padding: 3rem 0;
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 2.5rem;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -0.05rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/* .section2 */
+.wrapper2 .section2 div {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper2 .section2 div span {
+    width: 80%;
+    padding: 0.75rem 0;
+    border-radius: 5.35rem;
+    background: rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+/* .section3 */
+.wrapper2 .section3 {
+    padding-top: 7.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper2 .section3 div:nth-child(1) img {
+    height: 4rem;
+    margin-right: 1rem;
+}
+.wrapper2 .section3 div:nth-child(2) {
+    width: 12em;
+    font-size: 2.1rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper2 .section3 div:nth-child(2) span {
+    font-size: 2.1rem;
+    line-height: 1;
+    height: 1em;
+    overflow: hidden;
+    text-align: justify;
+}
+.wrapper2 .section3 div:nth-child(2) span::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+.wrapper2 .section3 div:nth-child(2) .space {
+    height: 0.75rem;
+}
+.wrapper2 .section3 div:nth-child(2) span:nth-child(3) {
     font-size: 1.1rem;
 }
