增加滚动条

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,9 @@ body {
     width: 100%;
     height: 100%;
 }
+.swiper-scrollbar-drag {
+    background: #fff;
+}
 /* .wrapper1 */
 .wrapper1 {
     height: 100%;
