--- a/css/index.css
+++ b/css/index.css
@@ -57,30 +57,30 @@ body {
 }
 /* .header部分 */
 .wrapper1 .header {
-    padding: 0 0.75rem;
+    padding: 0 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .wrapper1 .header div span {
     font-family: AdobeHeitiStd-Regular;
-    font-size: 2.5rem;
+    font-size: 50px;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -0.05rem;
+    letter-spacing: -1px;
     color: #000000;
 }
 .wrapper1 .header div:nth-child(3) span {
-    letter-spacing: -0.15rem;
+    letter-spacing: -3px;
 }
 
 /* .section1 */
 .wrapper1 .section1 {
     font-family: AdobeHeitiStd-Regular;
-    font-size: 5.5rem;
+    font-size: 110px;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -0.05rem;
+    letter-spacing: -1px;
     color: #fff;
     display: flex;
     align-items: center;
@@ -88,12 +88,12 @@ body {
 }
 /* .section1 */
 .wrapper1 .section2 {
-    padding: 3rem 0;
+    padding: 60px 0;
     font-family: AdobeHeitiStd-Regular;
-    font-size: 2.5rem;
+    font-size: 50px;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -0.05rem;
+    letter-spacing: -1px;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -110,33 +110,33 @@ body {
 }
 .wrapper1 .section2 div span {
     width: 80%;
-    padding: 0.75rem 0;
-    border-radius: 5.35rem;
+    padding: 15px 0;
+    border-radius: 107px;
     background: rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 /* .section3 */
 .wrapper1 .section3 {
-    padding-top: 7.5rem;
+    padding-top: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .wrapper1 .section3 div:nth-child(1) img {
-    height: 4rem;
-    margin-right: 1rem;
+    height: 80px;
+    margin-right: 20px;
 }
 .wrapper1 .section3 div:nth-child(2) {
     width: 12em;
-    font-size: 2.1rem;
+    font-size: 42px;
     color: #fff;
     display: flex;
     flex-direction: column;
 }
 
 .wrapper1 .section3 div:nth-child(2) span {
-    font-size: 2.1rem;
+    font-size: 42px;
     line-height: 1;
     height: 1em;
     overflow: hidden;
@@ -148,10 +148,10 @@ body {
     width: 100%;
 }
 .wrapper1 .section3 div:nth-child(2) .space {
-    height: 0.75rem;
+    height: 15px;
 }
 .wrapper1 .section3 div:nth-child(2) span:nth-child(3) {
-    font-size: 1.1rem;
+    font-size: 22px;
 }
 
 /* .wrapper2 */
@@ -173,109 +173,138 @@ body {
     flex-direction: column;
 }
 .wrapper2 .section1 {
-    height: 30%;
+    height: 25%;
 }
 .wrapper2 .section2 {
-    height: 40%;
+    height: 50%;
 }
-.wrapper2 .section3 {
-    height: 30%;
+.wrapper2 .section3 .wrapper {
+    height: 25%;
+    border: 1px solid blue;
 }
 /* .header部分 */
 .wrapper2 .header {
-    padding: 0 0.75rem;
+    padding: 0 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .wrapper2 .header div span {
     font-family: AdobeHeitiStd-Regular;
-    font-size: 2.5rem;
+    font-size: 50px;
     font-weight: normal;
     font-stretch: normal;
-    letter-spacing: -0.05rem;
+    letter-spacing: -1px;
     color: #000000;
 }
 .wrapper2 .header div:nth-child(3) span {
-    letter-spacing: -0.15rem;
+    letter-spacing: -3px;
 }
-
-/* .section1 */
+/* section1*/
 .wrapper2 .section1 {
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 5.5rem;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -0.05rem;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* .section1 */
-.wrapper2 .section2 {
-    padding: 3rem 0;
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 2.5rem;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -0.05rem;
-    color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
-/* .section2 */
+.wrapper2 .section1 .navInfo {
+    height: 40%;
+    font-family: ZhenyanGB-Regular;
+    font-size: 58px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+}
+.wrapper2 .section1 .navInfo span:nth-child(1) {
+    margin: 0 20px;
+}
+.wrapper2 .section1 .detail {
+    height: 60%;
+    font-family: PingFang-SC-Regular;
+    font-size: 38px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+}
+.wrapper2 .section1 .detail span {
+    padding: 0 20px;
+    text-align: center;
+    line-height: 1.6;
+}
+/* section2*/
+.wrapper2 .section2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 .wrapper2 .section2 div {
-    height: 20%;
-    width: 100%;
+    width: calc(50% - 15px);
+    height: 50%;
+}
+.wrapper2 .section2 div:nth-child(2n + 1) {
+    margin-left: 30px;
+}
+.wrapper2 .section2 div.son1 {
+    border: 3px solid red;
+    width: calc(100% - 30px);
+    height: 75%;
+    margin: 0;
+}
+.wrapper2 .section2 div.son2 {
+    width: calc(100% - 30px);
+    font-family: PingFang-SC-Regular;
+    color: #fff;
+    font-size: 25px;
+    height: 25%;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.wrapper2 .section2 div span {
-    width: 80%;
-    padding: 0.75rem 0;
-    border-radius: 5.35rem;
-    background: rgba(0, 0, 0, 0.3);
-    text-align: center;
-}
+
 /* .section3 */
 .wrapper2 .section3 {
-    padding-top: 7.5rem;
+    padding-top: 180px;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper2 .section3 div:nth-child(1) {
+    font-family: PingFang-SC-Regular;
+    text-align: center;
+    font-size: 38px;
+    color: #fff;
+}
+.wrapper2 .section3 .wrapper {
+    padding-top: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-.wrapper2 .section3 div:nth-child(1) img {
-    height: 4rem;
-    margin-right: 1rem;
+.wrapper2 .section3 .wrapper div:nth-child(1) img {
+    height: 80px;
+    margin-right: 20px;
 }
-.wrapper2 .section3 div:nth-child(2) {
+.wrapper2 .section3 .wrapper div:nth-child(2) {
     width: 12em;
-    font-size: 2.1rem;
+    font-size: 42px;
     color: #fff;
     display: flex;
     flex-direction: column;
 }
 
-.wrapper2 .section3 div:nth-child(2) span {
-    font-size: 2.1rem;
+.wrapper2 .section3 .wrapper div:nth-child(2) span {
+    font-size: 42px;
     line-height: 1;
     height: 1em;
     overflow: hidden;
     text-align: justify;
 }
-.wrapper2 .section3 div:nth-child(2) span::after {
+.wrapper2 .section3 .wrapper div:nth-child(2) span::after {
     content: '';
     display: inline-block;
     width: 100%;
 }
-.wrapper2 .section3 div:nth-child(2) .space {
-    height: 0.75rem;
+.wrapper2 .section3 .wrapper div:nth-child(2) .space {
+    height: 15px;
 }
-.wrapper2 .section3 div:nth-child(2) span:nth-child(3) {
-    font-size: 1.1rem;
+.wrapper2 .section3 .wrapper div:nth-child(2) span:nth-child(3) {
+    font-size: 22px;
 }
