--- a/css/index.css
+++ b/css/index.css
@@ -50,10 +50,10 @@ body {
     height: 30%;
 }
 .wrapper1 .section2 {
-    height: 40%;
+    height: 50%;
 }
 .wrapper1 .section3 {
-    height: 30%;
+    height: 20%;
 }
 /* .header部分 */
 .wrapper1 .header {
@@ -88,11 +88,11 @@ body {
 }
 /* .section1 */
 .wrapper1 .section2 {
+    position: relative;
+    top: -5vh;
     padding: 60px 0;
     font-family: AdobeHeitiStd-Regular;
     font-size: 50px;
-    font-weight: normal;
-    font-stretch: normal;
     letter-spacing: -1px;
     color: #fff;
     display: flex;
@@ -117,7 +117,6 @@ body {
 }
 /* .section3 */
 .wrapper1 .section3 {
-    padding-top: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -154,7 +153,7 @@ body {
     font-size: 22px;
 }
 
-/* .wrapper2 */
+/* wrapper2 */
 .wrapper2 {
     height: 100%;
     width: 100%;
@@ -176,11 +175,13 @@ body {
     height: 25%;
 }
 .wrapper2 .section2 {
-    height: 50%;
+    height: 45%;
 }
-.wrapper2 .section3 .wrapper {
-    height: 25%;
-    border: 1px solid blue;
+.wrapper2 .section3 {
+    height: 10%;
+}
+.wrapper2 .section4 {
+    height: 20%;
 }
 /* .header部分 */
 .wrapper2 .header {
@@ -262,27 +263,30 @@ body {
 
 /* .section3 */
 .wrapper2 .section3 {
-    padding-top: 180px;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper2 .section3 div:nth-child(1) {
     font-family: PingFang-SC-Regular;
     text-align: center;
     font-size: 38px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
 }
-.wrapper2 .section3 .wrapper {
-    padding-top: 150px;
+.wrapper2 .section3::before {
+    content: '';
+    flex-grow: 1;
+}
+
+/* section4 */
+.wrapper2 .section4 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.wrapper2 .section3 .wrapper div:nth-child(1) img {
+
+.wrapper2 .section4 div:nth-child(1) img {
     height: 80px;
     margin-right: 20px;
 }
-.wrapper2 .section3 .wrapper div:nth-child(2) {
+.wrapper2 .section4 div:nth-child(2) {
     width: 12em;
     font-size: 42px;
     color: #fff;
@@ -290,21 +294,132 @@ body {
     flex-direction: column;
 }
 
-.wrapper2 .section3 .wrapper div:nth-child(2) span {
+.wrapper2 .section4 div:nth-child(2) span {
     font-size: 42px;
     line-height: 1;
     height: 1em;
     overflow: hidden;
     text-align: justify;
 }
-.wrapper2 .section3 .wrapper div:nth-child(2) span::after {
+.wrapper2 .section4 div:nth-child(2) span::after {
     content: '';
     display: inline-block;
     width: 100%;
 }
-.wrapper2 .section3 .wrapper div:nth-child(2) .space {
+.wrapper2 .section4 div:nth-child(2) .space {
     height: 15px;
 }
-.wrapper2 .section3 .wrapper div:nth-child(2) span:nth-child(3) {
+.wrapper2 .section4 div:nth-child(2) span:nth-child(3) {
+    font-size: 22px;
+}
+/* .wrapper3 */
+.wrapper3 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper3 .header {
+    height: 5%;
+    background: #ffffff;
+}
+.wrapper3 .section {
+    background: no-repeat url('/img/reproduction.png');
+    background-size: cover;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper3 .section1 {
+    height: 12%;
+}
+.wrapper3 .section2 {
+    height: 80%;
+}
+.wrapper3 .section3 .wrapper {
+    height: 20%;
+}
+/* .header部分 */
+.wrapper3 .header {
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.wrapper3 .header div span {
+    font-family: AdobeHeitiStd-Regular;
+    font-size: 50px;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: -1px;
+    color: #000000;
+}
+.wrapper3 .header div:nth-child(3) span {
+    letter-spacing: -3px;
+}
+/* section1*/
+.wrapper3 .section1 {
+    display: flex;
+    align-items: center;
+    border: 1px solid red;
+}
+.wrapper3 .section1 .navInfo {
+    font-family: ZhenyanGB-Regular;
+    font-size: 58px;
+    color: #fff;
+    display: flex;
+}
+.wrapper3 .section1 .navInfo span:nth-child(1) {
+    margin: 0 20px;
+}
+
+/* section2*/
+
+/* .section3 */
+.wrapper3 .section3 {
+    padding-top: 180px;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper3 .section3 div:nth-child(1) {
+    font-family: PingFang-SC-Regular;
+    text-align: center;
+    font-size: 38px;
+    color: #fff;
+}
+.wrapper3 .section3 .wrapper {
+    padding-top: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper3 .section3 .wrapper div:nth-child(1) img {
+    height: 80px;
+    margin-right: 20px;
+}
+.wrapper3 .section3 .wrapper div:nth-child(2) {
+    width: 12em;
+    font-size: 42px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper3 .section3 .wrapper div:nth-child(2) span {
+    font-size: 42px;
+    line-height: 1;
+    height: 1em;
+    overflow: hidden;
+    text-align: justify;
+}
+.wrapper3 .section3 .wrapper div:nth-child(2) span::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+.wrapper3 .section3 .wrapper div:nth-child(2) .space {
+    height: 15px;
+}
+.wrapper3 .section3 .wrapper div:nth-child(2) span:nth-child(3) {
     font-size: 22px;
 }
