--- a/css/index.css
+++ b/css/index.css
@@ -312,6 +312,7 @@ body {
 .wrapper2 .section4 div:nth-child(2) span:nth-child(3) {
     font-size: 22px;
 }
+
 /* .wrapper3 */
 .wrapper3 {
     height: 100%;
@@ -324,6 +325,7 @@ body {
     background: #ffffff;
 }
 .wrapper3 .section {
+    position: relative;
     background: no-repeat url('/img/reproduction.png');
     background-size: cover;
     flex-grow: 1;
@@ -331,12 +333,13 @@ body {
     flex-direction: column;
 }
 .wrapper3 .section1 {
-    height: 12%;
+    height: 10%;
 }
 .wrapper3 .section2 {
-    height: 80%;
+    height: 70%;
+    position: relative;
 }
-.wrapper3 .section3 .wrapper {
+.wrapper3 .section3 {
     height: 20%;
 }
 /* .header部分 */
@@ -357,47 +360,50 @@ body {
 .wrapper3 .header div:nth-child(3) span {
     letter-spacing: -3px;
 }
+
 /* section1*/
 .wrapper3 .section1 {
     display: flex;
     align-items: center;
-    border: 1px solid red;
 }
 .wrapper3 .section1 .navInfo {
+    height: 40%;
     font-family: ZhenyanGB-Regular;
     font-size: 58px;
     color: #fff;
     display: flex;
+    align-items: center;
 }
 .wrapper3 .section1 .navInfo span:nth-child(1) {
     margin: 0 20px;
 }
-
-/* section2*/
-
-/* .section3 */
-.wrapper3 .section3 {
-    padding-top: 180px;
+/* .section2 */
+.wrapper3 .section2Wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 105%;
+    border: 3px solid red;
     display: flex;
     flex-direction: column;
 }
-.wrapper3 .section3 div:nth-child(1) {
-    font-family: PingFang-SC-Regular;
-    text-align: center;
-    font-size: 38px;
-    color: #fff;
+.wrapper3 .section2Wrapper li {
+    border: 1px solid black;
+    height: 12.5%;
 }
-.wrapper3 .section3 .wrapper {
-    padding-top: 150px;
+/* .section3 */
+.wrapper3 .section3 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.wrapper3 .section3 .wrapper div:nth-child(1) img {
+
+.wrapper3 .section3 div:nth-child(1) img {
     height: 80px;
     margin-right: 20px;
 }
-.wrapper3 .section3 .wrapper div:nth-child(2) {
+.wrapper3 .section3 div:nth-child(2) {
     width: 12em;
     font-size: 42px;
     color: #fff;
@@ -405,21 +411,21 @@ body {
     flex-direction: column;
 }
 
-.wrapper3 .section3 .wrapper div:nth-child(2) span {
+.wrapper3 .section3 div:nth-child(2) span {
     font-size: 42px;
     line-height: 1;
     height: 1em;
     overflow: hidden;
     text-align: justify;
 }
-.wrapper3 .section3 .wrapper div:nth-child(2) span::after {
+.wrapper3 .section3 div:nth-child(2) span::after {
     content: '';
     display: inline-block;
     width: 100%;
 }
-.wrapper3 .section3 .wrapper div:nth-child(2) .space {
+.wrapper3 .section3 div:nth-child(2) .space {
     height: 15px;
 }
-.wrapper3 .section3 .wrapper div:nth-child(2) span:nth-child(3) {
+.wrapper3 .section3 div:nth-child(2) span:nth-child(3) {
     font-size: 22px;
 }
