初步完成3张图

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,17 @@ body {
     height: 100vh;
 }
 /* 布局 */
+.backgroundImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.backgroundImg img {
+    opacity: 0.8;
+}
 .swiper-container {
     width: 100%;
     height: 100%;
@@ -40,8 +51,6 @@ body {
     background: #ffffff;
 }
 .wrapper1 .section {
-    background: no-repeat url('/img/reproduction.png');
-    background-size: cover;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -165,8 +174,6 @@ body {
     background: #ffffff;
 }
 .wrapper2 .section {
-    background: no-repeat url('/img/reproduction.png');
-    background-size: cover;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -326,8 +333,7 @@ body {
 }
 .wrapper3 .section {
     position: relative;
-    background: no-repeat url('/img/reproduction.png');
-    background-size: cover;
+
     flex-grow: 1;
     display: flex;
     flex-direction: column;
