--- a/css/index.css
+++ b/css/index.css
@@ -21,20 +21,11 @@ body {
     height: 100vh;
 }
 /* 布局 */
-.backgroundImg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
-
-.backgroundImg img {
-    opacity: 1;
-}
 .swiper-container {
     width: 100%;
     height: 100%;
+    background: no-repeat url('/img/backgroundImgx.jpg');
+    background-size: cover;
 }
 .swiper-scrollbar-drag {
     background: #fff;
@@ -97,9 +88,10 @@ body {
 }
 /* .section1 */
 .wrapper1 .section2 {
+    border: 3px solid red;
     position: relative;
     top: -5vh;
-    padding: 85px 0;
+    padding: 60px 0;
     font-family: AdobeHeitiStd-Regular;
     font-size: 50px;
     letter-spacing: -1px;
