--- a/css/index.css
+++ b/css/index.css
@@ -298,22 +298,44 @@ body {
           .wrapper3 .section .section1 .navInfo span:nth-child(1) img {
             height: 46px; }
     .wrapper3 .section .section2 {
-      height: 70%;
+      height: 80%;
       position: relative; }
       .wrapper3 .section .section2 .section2Wrapper {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 105%;
-        border: 3px solid red;
+        height: 99%;
+        background: #191e30;
         display: flex;
         flex-direction: column; }
         .wrapper3 .section .section2 .section2Wrapper li {
-          border: 1px solid black;
-          height: 12.5%; }
+          height: 11%;
+          display: flex;
+          align-items: center; }
+          .wrapper3 .section .section2 .section2Wrapper li div:nth-child(1) {
+            width: 15%;
+            display: flex;
+            display: flex;
+            align-items: center;
+            justify-content: center; }
+            .wrapper3 .section .section2 .section2Wrapper li div:nth-child(1) img {
+              height: 115px;
+              background: #133144; }
+          .wrapper3 .section .section2 .section2Wrapper li div:nth-child(2) {
+            width: 85%;
+            display: flex;
+            flex-direction: column;
+            color: #fff; }
+            .wrapper3 .section .section2 .section2Wrapper li div:nth-child(2) span:nth-child(1) {
+              font-family: PingFang-SC-Regular;
+              font-size: 42px; }
+            .wrapper3 .section .section2 .section2Wrapper li div:nth-child(2) span:nth-child(2) {
+              font-family: PingFang-SC-Regular;
+              letter-spacing: 0.1em;
+              font-size: 29px; }
     .wrapper3 .section .section3 {
-      height: 20%;
+      height: 10%;
       display: flex;
       align-items: center;
       justify-content: center; }
