--- a/scss/index.scss
+++ b/scss/index.scss
@@ -371,25 +371,52 @@ body {
             }
         }
         .section2 {
-            height: 70%;
+            height: 80%;
             position: relative;
             .section2Wrapper {
                 position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
-                height: 105%;
-                border: 3px solid red;
+                height: 99%;
+                background: #191e30;
                 display: flex;
                 flex-direction: column;
                 li {
-                    border: 1px solid black;
-                    height: 12.5%;
+                    height: 11%;
+                    display: flex;
+                    align-items: center;
+                    div:nth-child(1) {
+                        width: 15%;
+                        display: flex;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        img {
+                            height: 115px;
+                            background: #133144;
+                        }
+                    }
+                    div:nth-child(2) {
+                        width: 85%;
+                        display: flex;
+                        flex-direction: column;
+                        color: #fff;
+                        span:nth-child(1) {
+                            font-family: PingFang-SC-Regular;
+                            font-size: 42px;
+                        }
+                        span:nth-child(2) {
+                            font-family: PingFang-SC-Regular;
+                            letter-spacing: 0.1em;
+                            font-size: 29px;
+                        }
+                    }
                 }
             }
         }
         .section3 {
-            height: 20%;
+            height: 10%;
             display: flex;
             align-items: center;
             justify-content: center;
