--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,6 @@ body {
 .swiper-scrollbar-drag {
   background: #fff; }
 
-/* .wrapper1 */
 .wrapper1 {
   height: 100%;
   width: 100%;
@@ -122,7 +121,6 @@ body {
         .wrapper1 .section .section3 div:nth-child(2) span:nth-child(3) {
           font-size: 22px; }
 
-/* wrapper2 */
 .wrapper2 {
   height: 100%;
   width: 100%;
@@ -255,7 +253,6 @@ body {
           display: inline-block;
           width: 100%; }
 
-/* .wrapper3 */
 .wrapper3 {
   height: 100%;
   width: 100%;
@@ -363,6 +360,95 @@ body {
           display: inline-block;
           width: 100%; }
 
-/* .section3 */
+.wrapper4 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column; }
+  .wrapper4 .header {
+    height: 5%;
+    background: #ffffff;
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .wrapper4 .header div span {
+      font-family: AdobeHeitiStd-Regular;
+      font-size: 50px;
+      font-weight: normal;
+      font-stretch: normal;
+      letter-spacing: -1px;
+      color: #000000; }
+    .wrapper4 .header div:nth-child(3) span {
+      letter-spacing: -3px; }
+  .wrapper4 .section {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column; }
+    .wrapper4 .section .section1 {
+      height: 30%;
+      font-family: AdobeHeitiStd-Regular;
+      font-size: 110px;
+      font-weight: normal;
+      font-stretch: normal;
+      letter-spacing: -1px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .wrapper4 .section .section2 {
+      height: 50%;
+      border: 3px solid red;
+      position: relative;
+      top: -5vh;
+      padding: 60px 0;
+      font-family: AdobeHeitiStd-Regular;
+      font-size: 50px;
+      letter-spacing: -1px;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+      .wrapper4 .section .section2 div {
+        height: 20%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        .wrapper4 .section .section2 div span {
+          width: 80%;
+          padding: 15px 0;
+          border-radius: 107px;
+          background: rgba(0, 0, 0, 0.3);
+          text-align: center; }
+    .wrapper4 .section .section3 {
+      height: 20%;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .wrapper4 .section .section3 div:nth-child(1) img {
+        height: 80px;
+        margin-right: 20px; }
+      .wrapper4 .section .section3 div:nth-child(2) {
+        width: 12em;
+        font-size: 42px;
+        color: #fff;
+        display: flex;
+        flex-direction: column; }
+        .wrapper4 .section .section3 div:nth-child(2) span {
+          font-size: 42px;
+          line-height: 1;
+          height: 1em;
+          overflow: hidden;
+          text-align: justify; }
+        .wrapper4 .section .section3 div:nth-child(2) span::after {
+          content: '';
+          display: inline-block;
+          width: 100%; }
+        .wrapper4 .section .section3 div:nth-child(2) div.space {
+          height: 15px; }
+        .wrapper4 .section .section3 div:nth-child(2) span:nth-child(3) {
+          font-size: 22px; }
 
 /*# sourceMappingURL=index.css.map */
