--- a/scss/index.scss
+++ b/scss/index.scss
@@ -31,7 +31,6 @@ body {
 .swiper-scrollbar-drag {
     background: #fff;
 }
-/* .wrapper1 */
 .wrapper1 {
     height: 100%;
     width: 100%;
@@ -145,7 +144,6 @@ body {
     }
 }
 
-/* wrapper2 */
 .wrapper2 {
     height: 100%;
     width: 100%;
@@ -316,7 +314,6 @@ body {
     }
 }
 
-/* .wrapper3 */
 .wrapper3 {
     height: 100%;
     width: 100%;
@@ -455,4 +452,116 @@ body {
         }
     }
 }
-/* .section3 */
+
+.wrapper4 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .header {
+        height: 5%;
+        background: #ffffff;
+        padding: 0 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+            span {
+                font-family: AdobeHeitiStd-Regular;
+                font-size: 50px;
+                font-weight: normal;
+                font-stretch: normal;
+                letter-spacing: -1px;
+                color: #000000;
+            }
+        }
+        div:nth-child(3) {
+            span {
+                letter-spacing: -3px;
+            }
+        }
+    }
+    .section {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        .section1 {
+            height: 30%;
+            font-family: AdobeHeitiStd-Regular;
+            font-size: 110px;
+            font-weight: normal;
+            font-stretch: normal;
+            letter-spacing: -1px;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .section2 {
+            height: 50%;
+            border: 3px solid red;
+            position: relative;
+            top: -5vh;
+            padding: 60px 0;
+            font-family: AdobeHeitiStd-Regular;
+            font-size: 50px;
+            letter-spacing: -1px;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            div {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                span {
+                    width: 80%;
+                    padding: 15px 0;
+                    border-radius: 107px;
+                    background: rgba(0, 0, 0, 0.3);
+                    text-align: center;
+                }
+            }
+        }
+        .section3 {
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div:nth-child(1) {
+                img {
+                    height: 80px;
+                    margin-right: 20px;
+                }
+            }
+            div:nth-child(2) {
+                width: 12em;
+                font-size: 42px;
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 42px;
+                    line-height: 1;
+                    height: 1em;
+                    overflow: hidden;
+                    text-align: justify;
+                }
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                }
+                div.space {
+                    height: 15px;
+                }
+                span:nth-child(3) {
+                    font-size: 22px;
+                }
+            }
+        }
+    }
+}
