--- a/scss/index.scss
+++ b/scss/index.scss
@@ -21,7 +21,6 @@ body {
     height: 100vh;
     height: 100vh;
 }
-/* 布局 */
 .swiper-container {
     width: 100%;
     height: 100%;
@@ -210,11 +209,13 @@ body {
         }
         .section2 {
             height: 45%;
+            padding-left: 3vw;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             div.item {
-                width: 50%;
+                width: 45.5vw;
+                margin-right: 3vw;
                 height: 50%;
 
                 div.son1 {
@@ -257,7 +258,7 @@ body {
                 }
             }
             // div:nth-child(2n + 1) {
-            //     margin-left: 2%;
+            //     margin-left: 2vw;
             // }
         }
         .section3 {
@@ -485,44 +486,59 @@ body {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
+
         .section1 {
-            height: 30%;
-            font-family: AdobeHeitiStd-Regular;
-            font-size: 110px;
-            font-weight: normal;
-            font-stretch: normal;
-            letter-spacing: -1px;
+            height: 10%;
+            display: flex;
+            font-family: ZhenyanGB-Regular;
+            font-size: 58px;
             color: #fff;
             display: flex;
             align-items: center;
-            justify-content: center;
+            span:nth-child(1) {
+                margin: 0 20px;
+                img {
+                    height: 46px;
+                }
+            }
         }
         .section2 {
-            height: 50%;
-            border: 3px solid red;
+            height: 70%;
             position: relative;
-            top: -5vh;
-            padding: 60px 0;
-            font-family: AdobeHeitiStd-Regular;
-            font-size: 50px;
-            letter-spacing: -1px;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            div {
-                height: 20%;
+            .section2Wrapper {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 108%;
                 width: 100%;
                 display: flex;
-                align-items: center;
-                justify-content: center;
-                span {
-                    width: 80%;
-                    padding: 15px 0;
-                    border-radius: 107px;
-                    background: rgba(0, 0, 0, 0.3);
-                    text-align: center;
+                flex-direction: column;
+
+                .s2part1 {
+                    height: 56%;
+                    width: 100%;
+                    .title {
+                        height: 15%;
+                        border: 3px solid red;
+                        font-family: AdobeHeitiStd-Regular;
+                        font-size: 42px;
+                        color: #fff;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        span:nth-child(2) {
+                            margin: 0 0.5em;
+                        }
+                    }
+                    ul.content {
+                        height: 85%;
+                        border: 3px solid red;
+                    }
+                }
+                .s2part2 {
+                    border: 3px solid black;
+                    height: 44%;
+                    width: 100%;
                 }
             }
         }
@@ -550,16 +566,17 @@ body {
                     overflow: hidden;
                     text-align: justify;
                 }
-                span::after {
-                    content: '';
-                    display: inline-block;
-                    width: 100%;
-                }
                 div.space {
                     height: 15px;
                 }
                 span:nth-child(3) {
                     font-size: 22px;
+                }
+
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
                 }
             }
         }
