--- a/scss/index.scss
+++ b/scss/index.scss
@@ -519,7 +519,6 @@ body {
                     width: 100%;
                     .title {
                         height: 15%;
-                        border: 3px solid red;
                         font-family: AdobeHeitiStd-Regular;
                         font-size: 42px;
                         color: #fff;
@@ -530,9 +529,42 @@ body {
                             margin: 0 0.5em;
                         }
                     }
-                    ul.content {
+
+                    .content {
                         height: 85%;
-                        border: 3px solid red;
+                        padding-left: 3vw;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                        div.item {
+                            width: 45.5vw;
+                            margin-right: 3vw;
+                            height: 50%;
+                            overflow: hidden;
+
+                            div.son1 {
+                                height: 75%;
+                                width: 100%;
+                                margin: 0;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                img {
+                                    height: 100%;
+                                }
+                            }
+                            div.son2 {
+                                width: calc(100% - 30px);
+                                font-family: PingFang-SC-Regular;
+                                color: #fff;
+                                font-size: 33px;
+                                height: 25%;
+                                margin: 0;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
+                        }
                     }
                 }
                 .s2part2 {
