--- a/scss/index.scss
+++ b/scss/index.scss
@@ -568,9 +568,50 @@ body {
                     }
                 }
                 .s2part2 {
-                    border: 3px solid black;
                     height: 44%;
                     width: 100%;
+                    .title {
+                        height: 15%;
+                        font-family: AdobeHeitiStd-Regular;
+                        font-size: 42px;
+                        color: #fff;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        span:nth-child(2) {
+                            margin: 0 0.5em;
+                        }
+                    }
+
+                    .content {
+                        height: 85%;
+                        padding-left: 3vw;
+                        display: flex;
+                        flex-direction: column;
+                        .line1 {
+                            border: 3px solid red;
+                            height: 50%;
+                            width: 100%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            img {
+                                height: 129px;
+                                margin: 50px;
+                            }
+                        }
+                        .line2 {
+                            border: 3px solid red;
+                            height: 50%;
+                            width: 100%;
+                            align-items: center;
+                            justify-content: center;
+                            img {
+                                height: 129px;
+                                margin: 50px;
+                            }
+                        }
+                    }
                 }
             }
         }
