--- a/scss/index.scss
+++ b/scss/index.scss
@@ -589,26 +589,58 @@ body {
                         display: flex;
                         flex-direction: column;
                         .line1 {
-                            border: 3px solid red;
                             height: 50%;
                             width: 100%;
                             display: flex;
                             align-items: center;
                             justify-content: center;
-                            img {
-                                height: 129px;
-                                margin: 50px;
+                            div {
+                                display: flex;
+                                flex-direction: column;
+                                margin: 0 50px;
+                                height: 80%;
+                                width: 124px;
+                                img {
+                                    width: 124px;
+                                }
+                                span {
+                                    font-family: PingFang-SC-Regular;
+                                    font-size: 38px;
+                                    flex-grow: 1;
+                                    color: #fff;
+                                    display: flex;
+                                    white-space: nowrap;
+                                    align-items: center;
+                                    justify-content: center;
+                                }
                             }
                         }
                         .line2 {
-                            border: 3px solid red;
+                            margin-top: -30px;
                             height: 50%;
                             width: 100%;
+                            display: flex;
                             align-items: center;
                             justify-content: center;
-                            img {
-                                height: 129px;
-                                margin: 50px;
+                            div {
+                                display: flex;
+                                flex-direction: column;
+                                margin: 0 50px;
+                                height: 80%;
+                                width: 124px;
+                                img {
+                                    width: 124px;
+                                }
+                                span {
+                                    font-family: PingFang-SC-Regular;
+                                    font-size: 38px;
+                                    flex-grow: 1;
+                                    color: #fff;
+                                    white-space: nowrap;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                }
                             }
                         }
                     }
