--- a/scss/index.scss
+++ b/scss/index.scss
@@ -736,22 +736,22 @@ body {
             }
         }
         .section2 {
-            height: 20%;
-            margin: 0 20px 50px 20px;
+            height: 15%;
+            margin: 0 20px 30px 20px;
             background-color: rgba($color: #0f1725, $alpha: 0.72);
             display: flex;
             flex-direction: column;
             color: #fff;
             .s2p1 {
-                height: 22%;
-                font-size: 42px;
+                height: 23%;
+                font-size: 40px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
             }
             .s2p2 {
-                height: 20%;
-                font-size: 38px;
+                height: 19%;
+                font-size: 35px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -799,8 +799,8 @@ body {
                         position: absolute;
                         background-color: #3f434d;
                         border-radius: 10px;
-                        font-size: 25px;
-                        padding: 5px 10px;
+                        font-size: 20px;
+                        padding: 2px 10px;
                         left: -10%;
                         bottom: -30%;
                     }
@@ -865,9 +865,8 @@ body {
         }
 
         .section3 {
-            height: 50%;
+            height: 55%;
             margin: 0 20px;
-
             position: relative;
             .section3Wrapper {
                 position: absolute;
@@ -876,6 +875,81 @@ body {
                 height: 110%;
                 width: 100%;
                 background-color: rgba($color: #0f1725, $alpha: 0.72);
+                color: #fff;
+                .s3p1 {
+                    height: 7%;
+                    font-family: AdobeHeitiStd-Regular;
+                    font-size: 42px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .s3p2,
+                .s3p3,
+                .s3p4 {
+                    height: 31%;
+                    display: flex;
+                    flex-direction: column;
+                    .title {
+                        display: flex;
+                        align-items: center;
+
+                        .tipIcon {
+                            height: 30px;
+                            width: 10px;
+                            background-color: #2d5de7;
+                            margin: 0 20px;
+                        }
+                        .tipInfo {
+                            font-family: AdobeHeitiStd-Regular;
+                            font-size: 34px;
+                        }
+                    }
+                    .content {
+                        flex-grow: 1;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        .contentWrapper {
+                            display: flex;
+                            align-items: flex-start;
+                            justify-content: center;
+                            width: 100%;
+                            .item {
+                                width: 7.5%;
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+                                font-family: AdobeHeitiStd-Regular;
+                                font-size: 21px;
+
+                                span:nth-child(2) {
+                                    line-height: 1;
+                                    width: 1.5em;
+                                    position: relative;
+                                }
+                                span.extra:nth-child(2)::after {
+                                    content: '合作单';
+                                    line-height: 1;
+                                    width: 1.5em;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 1.5em;
+                                    right: -1.2em;
+                                }
+                            }
+                            .rightArrow {
+                                align-self: center;
+                                width: 7.5%;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
+                        }
+                    }
+                }
             }
         }
         .section4 {
