--- a/scss/index.scss
+++ b/scss/index.scss
@@ -992,3 +992,110 @@ body {
         }
     }
 }
+
+.wrapper6 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .header {
+        height: 5%;
+        background: #ffffff;
+        padding: 0 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+            span {
+                font-family: AdobeHeitiStd-Regular;
+                font-size: 50px;
+                font-weight: normal;
+                font-stretch: normal;
+                letter-spacing: -1px;
+                color: #000000;
+            }
+        }
+        div:nth-child(3) {
+            span {
+                letter-spacing: -3px;
+            }
+        }
+    }
+    .section {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+
+        .section1 {
+            height: 10%;
+            display: flex;
+            font-family: ZhenyanGB-Regular;
+            font-size: 58px;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            span:nth-child(1) {
+                margin: 0 20px;
+                img {
+                    height: 46px;
+                }
+            }
+        }
+        .section2 {
+            height: 70%;
+            margin: 0 20px 20px;
+
+            display: flex;
+            flex-direction: column;
+            color: #fff;
+            position: relative;
+            .section2Wrapper {
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: rgba($color: #0f1725, $alpha: 0.72);
+                width: 100%;
+                height: 106%;
+            }
+        }
+
+        .section3 {
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div:nth-child(1) {
+                img {
+                    height: 80px;
+                    margin-right: 20px;
+                }
+            }
+            div:nth-child(2) {
+                width: 12em;
+                font-size: 42px;
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 42px;
+                    line-height: 1;
+                    height: 1em;
+                    overflow: hidden;
+                    text-align: justify;
+                }
+                div.space {
+                    height: 15px;
+                }
+                span:nth-child(3) {
+                    font-size: 22px;
+                }
+
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
