--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1056,6 +1056,76 @@ body {
                 background-color: rgba($color: #0f1725, $alpha: 0.72);
                 width: 100%;
                 height: 106%;
+                .s2p1 {
+                    height: 22%;
+                    display: flex;
+                    flex-direction: column;
+                    div {
+                        font-size: 42px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                    ul {
+                        flex-grow: 1;
+                        display: flex;
+                        li {
+                            width: 50%;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+                            font-family: ZhenyanGB-Regular;
+                            font-size: 42px;
+                            img {
+                                height: 111px;
+                            }
+                        }
+                    }
+                }
+                .s2p2 {
+                    height: 78%;
+                    ul {
+                        height: 100%;
+                        width: 100%;
+                        li {
+                            height: 16%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            div {
+                                height: 115px;
+                                width: 90%;
+                                background-color: rgba($color: #242e56, $alpha: 0.59);
+                                border-radius: 10px;
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-between;
+                                span:nth-of-type(1) {
+                                    font-size: 33px;
+                                    letter-spacing: -1px;
+                                }
+                                span:nth-of-type(2) {
+                                    font-size: 33px;
+                                    letter-spacing: -1px;
+                                }
+                                img:nth-of-type(1) {
+                                    margin: 0 20px;
+                                    z-index: 1;
+                                    height: 31px;
+                                }
+                                img:nth-of-type(2) {
+                                    height: 154px;
+                                }
+                                img:nth-of-type(3) {
+                                    justify-self: flex-end;
+                                    margin: 0 20px;
+                                    height: 34px;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
 
