完成合作方式

--- a/css/index.css
+++ b/css/index.css
@@ -894,7 +894,7 @@ body {
               align-items: center;
               justify-content: center; }
               .wrapper6 .section .section2 .section2Wrapper .s2p2 ul li div {
-                height: 115px;
+                height: 65%;
                 width: 90%;
                 background-color: rgba(36, 46, 86, 0.59);
                 border-radius: 10px;
@@ -912,7 +912,7 @@ body {
                   z-index: 1;
                   height: 31px; }
                 .wrapper6 .section .section2 .section2Wrapper .s2p2 ul li div img:nth-of-type(2) {
-                  height: 154px; }
+                  height: 135%; }
                 .wrapper6 .section .section2 .section2Wrapper .s2p2 ul li div img:nth-of-type(3) {
                   justify-self: flex-end;
                   margin: 0 20px;
